--- a/404.md
+++ b/404.md
@@ -1,6 +1,6 @@
 # Page non trouvée
 
-C'est moche, la page demandée n'existe pas ou n'existe plus. 
+Oups la page demandée n'existe pas ou n'existe plus. 
 
 <img src="{{ 'assets/media/erreur404-1280x720.jpg' | relative_url }}" alt="Not found" />
 
